@@ -83,6 +83,8 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8089. Move o.a.h.hdfs.web.resources.* to the client jars. (wheat9)
 
+    HDFS-7979. Initialize block report IDs with a random number. (wang)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
